Changed font, added svg logo to menu, changed colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@
     float: left;
     padding: 15px;
 }
-html {
-    font-family: "Lucida Sans", sans-serif;
+html, body {
+    /*font-family: "Lucida Sans", sans-serif;*/
+    font-family: 'Andika';font-size: 22px;
 }
 /*
 .header {
@@ -90,6 +91,9 @@ html {
 /*@media only screen and (min-width: 1200px) {...}*/
 
 #navTransparentClickAwayArea {width: 100%;height: 100vh;opacity: 0;}
+.lodo-red {color: #fff;background-color: #de1426;}
+#navLogo{float: left;height:33px;}
+#navLogoContainer{padding-right: 0!important;}
 
 /* w3.css */
 /*
