--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,3 +1,8 @@
+*, *:before, *:after
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  box-sizing: border-box
+
 
 nav 
     display: flex
@@ -7,7 +12,7 @@ nav
     width: 100%
     background-color: #8B1616
     border-top: 3px solid #414141
-    height: 39px
+    height: 42px
 
 
 nav img 
@@ -186,8 +191,8 @@ h2, h3
     border-bottom: 2px solid #B7B7B7
     // text-transform: uppercase 
     position: relative
-    max-width: 800px
-    min-width: 550px
+    max-width: 860px
+    min-width: 610px
 
 
 .slogan-box1 span 
@@ -410,7 +415,7 @@ h2, h3
     text-decoration: inherit
     display: flex
     align-items: center
-    width: 283px
+    width: 293px
     height: 69px
     margin-left: 20px
     margin-top: 20px
@@ -447,7 +452,7 @@ h2, h3
     font-weight: 700
     letter-spacing: 3px
     text-decoration: none
-    width: 210px
+    width: 318px
     text-align: center
     margin: 45px auto
     display: block
@@ -503,7 +508,7 @@ h2, h3
     // top: 10px
     // left: 10px
     margin: 0 auto
-    max-width: 80%
+    max-width: 90%
 
 
 .committed 
