--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -21,18 +21,17 @@ nav {
   height: 84px;
 }
 
-nav img {
+nav > img {
   padding: 0px 20px;
   height: 100%;
   width: auto;
   /* mobile */
+  display: none;
 }
 
 nav img:nth-of-type(2) {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
-  /* mobile */
-  display: none;
 }
 
 nav div {
@@ -40,6 +39,22 @@ nav div {
       -ms-flex: 1;
           flex: 1;
   margin: auto 20px;
+  /* mobile */
+  margin: 0;
+  padding: 0 10px;
+}
+
+/* mobile */
+a#m-nav {
+  height: 100%;
+  padding: 0 15px;
+}
+
+/* mobile */
+nav > a > img {
+  height: 70px;
+  float: right;
+  padding-top: 5px;
 }
 
 nav ul {
@@ -86,10 +101,11 @@ nav h6 {
   color: #fff;
   text-align: center;
   /* mobile */
-  font-size: 32px;
+  font-size: 26px;
+  font-weight: 600;
 }
 
-nav a {
+nav ul a {
   text-decoration: none;
   color: #FFC99D;
   font-family: 'Noto Sans KR', sans-serif;
@@ -124,6 +140,8 @@ nav a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  /* mobile */
+  width: 100%;
 }
 
 .splash:after {
@@ -225,6 +243,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   position: relative;
   max-width: 860px;
   min-width: 610px;
+  /* mobile */
+  min-width: 0;
 }
 
 .slogan-box1 span {
@@ -623,6 +643,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   margin-bottom: 20px;
   text-align: center;
   color: #484848;
+  /* mobile */
+  margin: 0;
 }
 
 .committed span {
@@ -651,6 +673,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   border-top-color: #006464;
   padding: 0px 200px;
   padding-bottom: 50px;
+  /* mobile */
+  padding: 0;
 }
 
 .section-footer {
