--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -15,7 +15,7 @@ nav
     height: 42px
     /* mobile */
     color: #fff
-    height: 84px
+    height: 60px
 
 
 nav > img 
@@ -24,11 +24,14 @@ nav > img
     width: auto
     /* mobile */
     // padding: 0px 30px
-    display: none
+    padding: 0 10px
+    height: 50px
 
 
 nav img:nth-of-type(2) 
     transform: rotateY(180deg)
+    /* mobile */
+    display: none
 
 
 nav div
@@ -42,13 +45,13 @@ nav div
 /* mobile */
 a#m-nav
     height: 100%
-    padding: 0 15px
+    padding: 0 10px
     
 /* mobile */
 nav > a > img
-    height: 70px
+    height: 50px
     float: right
-    padding-top: 5px
+    padding-top: 4px
 
 
 nav ul 
@@ -86,7 +89,7 @@ nav h6
     color: #fff
     text-align: center
     /* mobile */
-    font-size: 26px
+    font-size: 20px
     // font-family: 'Times New Roman', serif
     // text-transform: uppercase
     font-weight: 600
