--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -17,7 +17,6 @@ nav {
   border-color: #414141;
   height: 42px;
   /* mobile */
-  color: #fff;
   height: 60px;
 }
 
@@ -27,7 +26,7 @@ nav > img {
   width: auto;
   /* mobile */
   padding: 0 10px;
-  height: 50px;
+  height: 45px;
 }
 
 nav img:nth-of-type(2) {
@@ -51,13 +50,15 @@ nav div {
 a#m-nav {
   height: 100%;
   padding: 0 10px;
+  width: 76px;
 }
 
 /* mobile */
 nav > a > img {
   height: 50px;
-  float: right;
   padding-top: 4px;
+  display: block;
+  margin: 0 auto;
 }
 
 nav ul {
@@ -104,8 +105,9 @@ nav h6 {
   color: #fff;
   text-align: center;
   /* mobile */
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
+  color: #FFD1AD;
 }
 
 nav ul a {
@@ -145,6 +147,7 @@ nav a:hover {
           align-items: center;
   /* mobile */
   width: 100%;
+  height: 300px;
 }
 
 .splash:after {
@@ -166,6 +169,10 @@ nav a:hover {
   background-image: url("../images/title-outlines.svg");
   position: relative;
   z-index: 2;
+  /* mobile */
+  width: 95vw;
+  height: 10.2vw;
+  background-size: cover;
 }
 
 .splash h1 {
@@ -216,6 +223,12 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   display: flex;
   height: 380px;
   border-top-color: #f0be65;
+  /* mobile */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: auto;
 }
 
 .slogan-box1 {
@@ -228,10 +241,14 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #fffef7;
+  background-color: #FFFEF7;
   -webkit-box-flex: 2;
       -ms-flex: 2 0 50%;
           flex: 2 0 50%;
+  /* mobile */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .slogan-box1 h3 {
@@ -248,6 +265,10 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   min-width: 610px;
   /* mobile */
   min-width: 0;
+  padding: 40px 20px;
+  margin: 0;
+  border: none;
+  font-size: 18px;
 }
 
 .slogan-box1 span {
@@ -258,6 +279,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
 .slogan-box1 img:first-of-type {
   position: absolute;
   left: 30px;
+  /* mobile */
+  left: -20px;
 }
 
 .slogan-box1 img:nth-of-type(2) {
@@ -266,6 +289,9 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   bottom: 30px;
   -webkit-transform: rotateZ(180deg);
           transform: rotateZ(180deg);
+  /* mobile */
+  right: -20px;
+  bottom: 30px;
 }
 
 .slogan-box2 {
@@ -276,6 +302,9 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   background-size: 100%;
   background-position: center 70%;
   position: relative;
+  /* mobile */
+  height: 298px;
+  background-image: url("../images/slogan-e-trans-mobile.jpg");
 }
 
 #map-marker-container {
