--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -14,7 +14,6 @@ nav
     border-color: #414141
     height: 42px
     /* mobile */
-    color: #fff
     height: 60px
 
 
@@ -25,7 +24,7 @@ nav > img
     /* mobile */
     // padding: 0px 30px
     padding: 0 10px
-    height: 50px
+    height: 45px
 
 
 nav img:nth-of-type(2) 
@@ -46,12 +45,14 @@ nav div
 a#m-nav
     height: 100%
     padding: 0 10px
+    width: 76px
     
 /* mobile */
 nav > a > img
     height: 50px
-    float: right
     padding-top: 4px
+    display: block
+    margin: 0 auto
 
 
 nav ul 
@@ -89,11 +90,12 @@ nav h6
     color: #fff
     text-align: center
     /* mobile */
-    font-size: 20px
+    font-size: 18px
     // font-family: 'Times New Roman', serif
     // text-transform: uppercase
     font-weight: 600
     // text-align: left
+    color: #FFD1AD
 
 
 nav ul a 
@@ -125,6 +127,7 @@ nav a:hover
     align-items: center
     /* mobile */
     width: 100%
+    height: 300px
 
 .splash:after 
     content: " "
@@ -147,6 +150,10 @@ nav a:hover
     background-image: url("../images/title-outlines.svg")
     position: relative
     z-index: 2
+    /* mobile */
+    width: 95vw
+    height: 10.2vw
+    background-size: cover
 
 
 // .splash-logo:nth-of-type(2) 
@@ -202,6 +209,9 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     display: flex
     height: 380px
     border-top-color: #f0be65
+    /* mobile */
+    flex-direction: column
+    height: auto
 
 
 .slogan-box1 
@@ -209,8 +219,10 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     display: flex
     align-items: center
     // background-color: rgb(168, 29, 41) 
-    background-color: rgb(255, 254, 247)
+    background-color: #FFFEF7
     flex: 2 0 50%
+    /* mobile */
+    justify-content: center
 
 
 .slogan-box1 h3 
@@ -231,6 +243,10 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     min-width: 610px
     /* mobile */
     min-width: 0
+    padding: 40px 20px
+    margin: 0
+    border: none
+    font-size: 18px
 
 
 
@@ -242,12 +258,17 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
 .slogan-box1 img:first-of-type
     position: absolute
     left: 30px
+    /* mobile */
+    left: -20px
 
 .slogan-box1 img:nth-of-type(2)
     position: absolute
     right: 30px
     bottom: 30px
     transform: rotateZ(180deg)
+    /* mobile */
+    right: -20px
+    bottom: 30px
 
 
 .slogan-box2 
@@ -256,6 +277,9 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     background-size: 100%
     background-position: center 70%
     position: relative
+    /* mobile */
+    height: 298px
+    background-image: url("../images/slogan-e-trans-mobile.jpg")
 
 
 // .slogan-box2:after 
