--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -346,6 +346,10 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   height: 430px;
   background-size: 100% 100%;
   min-width: 1366px;
+  /* mobile */
+  height: 468px;
+  background-image: url(../images/map-m-light.png);
+  min-width: 360px;
 }
 
 .section-location h3 {
@@ -360,6 +364,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   border-radius: 20px;
   -webkit-box-shadow: -5px 10px 5px rgba(136, 136, 136, 0.5);
           box-shadow: -5px 10px 5px rgba(136, 136, 136, 0.5);
+  /* mobile */
+  max-width: 352px;
 }
 
 #map-marker-transition {
@@ -442,6 +448,13 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  /* mobile */
+  position: static;
+}
+
+/* mobile */
+.location img {
+  display: none;
 }
 
 .location h6 {
@@ -450,6 +463,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   font-weight: 600;
+  /* mobile */
+  font-size: 24px;
 }
 
 #glendora {
@@ -514,6 +529,11 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  /* mobile */
+  -webkit-box-pack: initial;
+      -ms-flex-pack: initial;
+          justify-content: initial;
+  margin: 0 20px;
 }
 
 .grid-classes div {
@@ -554,6 +574,11 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   margin-left: 20px;
   margin-top: 20px;
   padding-right: 10px;
+}
+
+/* mobile */
+.grid-classes a:nth-child(n+5) {
+  display: none;
 }
 
 .grid-classes a:hover .grid-classes-icon {
