--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -128,6 +128,7 @@ nav a:hover
     /* mobile */
     width: 100%
     height: 300px
+    padding-top: 60px
 
 .splash:after 
     content: " "
@@ -151,9 +152,11 @@ nav a:hover
     position: relative
     z-index: 2
     /* mobile */
-    width: 95vw
-    height: 10.2vw
+    $title-width-m: 75vw
+    width: $title-width-m
+    height: $title-width-m / 3.2177827799662352279122115925718
     background-size: cover
+    background-image: url("../images/title-outlines-m.svg")
 
 
 // .splash-logo:nth-of-type(2) 
@@ -454,6 +457,14 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     letter-spacing: 1.5px
     // padding: 0 10%
     padding: 1px
+    /* mobile */
+    display: flex
+    flex-direction: column
+    padding-bottom: 30px
+
+/* mobile */
+.section-classes .button
+    margin-bottom: 20px
 
 
 .grid-classes 
@@ -472,6 +483,7 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     /* mobile */
     justify-content: initial
     margin: 0 20px
+    order: 2
     
 
 
@@ -595,6 +607,8 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     // left: 10px
     margin: 0 auto
     max-width: 90%
+    /* mobile */
+    display: none
 
 
 .committed 
