--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -11,6 +11,7 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   position: fixed;
+  top: 0;
   z-index: 5;
   width: 100%;
   background-color: #8B1616;
@@ -147,8 +148,11 @@ nav a:hover {
           align-items: center;
   /* mobile */
   width: 100%;
-  height: 300px;
-  padding-top: 60px;
+  height: 370px;
+  margin-top: 60px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .splash:after {
@@ -162,6 +166,8 @@ nav a:hover {
   right: 0;
   background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright.png");
   background-size: 100% 100%;
+  /* mobile */
+  background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright-m2.png");
 }
 
 .splash-child {
@@ -171,10 +177,11 @@ nav a:hover {
   position: relative;
   z-index: 2;
   /* mobile */
-  width: 75vw;
-  height: 23.30797vw;
+  width: 85vw;
+  height: 37.80126vw;
   background-size: cover;
-  background-image: url("../images/title-outlines-m.svg");
+  background-image: url("../images/title-outlines-m3.svg");
+  top: 55px;
 }
 
 .splash h1 {
