--- a/css/styles-m.css
+++ b/css/styles-m.css
@@ -148,11 +148,7 @@ nav a:hover {
           align-items: center;
   /* mobile */
   width: 100%;
-  height: 370px;
-  margin-top: 60px;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  height: 100vh;
 }
 
 .splash:after {
@@ -167,7 +163,7 @@ nav a:hover {
   background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright.png");
   background-size: 100% 100%;
   /* mobile */
-  background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright-m2.png");
+  background-image: url("../images/doberman_pinscher-cutout-v8-doberman-leaves-bright-m2-stroke.png");
 }
 
 .splash-child {
@@ -178,10 +174,10 @@ nav a:hover {
   z-index: 2;
   /* mobile */
   width: 85vw;
-  height: 37.80126vw;
+  height: 46.35253vw;
   background-size: cover;
-  background-image: url("../images/title-outlines-m3.svg");
-  top: 55px;
+  background-image: url("../images/title-outlines-m4.svg");
+  top: -15vh;
 }
 
 .splash h1 {
@@ -661,6 +657,48 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
   border-top-color: #9A0808;
   -webkit-box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.4) inset;
           box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.4) inset;
+  /* mobile */
+  height: 400px;
+  background-position: 0 30%;
+  background-size: auto 180%;
+  -webkit-animation-name: side-scroll;
+          animation-name: side-scroll;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+}
+
+/* mobile */
+@-webkit-keyframes side-scroll {
+  0%, 20% {
+    background-position: 0% 30%;
+  }
+  25%, 45% {
+    background-position: 38% 30%;
+  }
+  50%, 70% {
+    background-position: 70% 30%;
+  }
+  75%, 95% {
+    background-position: 100% 30%;
+  }
+}
+@keyframes side-scroll {
+  0%, 20% {
+    background-position: 0% 30%;
+  }
+  25%, 45% {
+    background-position: 38% 30%;
+  }
+  50%, 70% {
+    background-position: 70% 30%;
+  }
+  75%, 95% {
+    background-position: 100% 30%;
+  }
 }
 
 .section-welcomed h3 {
