--- a/css/styles-m.sass
+++ b/css/styles-m.sass
@@ -128,10 +128,11 @@ nav a:hover
     align-items: center
     /* mobile */
     width: 100%
-    // height: 370px
-    height: 100vh
-    // margin-top: 60px
+    height: 370px
+    margin-top: 60px
     // align-items: flex-start
+    /* mobile */
+    background-image: url("../images/doberman_pinscher-cutout-v8-BG-d-dark.png")
 
 .splash:after 
     content: " "
@@ -164,7 +165,7 @@ nav a:hover
     background-image: url("../images/title-outlines-m4.svg")
     // top: 10px
     // top: 55px
-    top: -15vh
+    top: -10vh
 
 
 // .splash-logo:nth-of-type(2) 
@@ -582,13 +583,14 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     border-top-color: #9A0808 //#830000 //#A6A6A6 //#006464
     box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.4) inset
     /* mobile */
-    height: 400px
-    background-position: 0 30%
-    background-size: auto 180%
-    animation-name: side-scroll
-    animation-duration: 7s
-    animation-iteration-count: infinite
-    animation-timing-function: ease
+    height: 200px
+    // background-position: 0 30%
+    // background-size: auto 180%
+    // animation-name: side-scroll
+    // animation-duration: 7s
+    // animation-iteration-count: infinite
+    // animation-timing-function: ease
+    box-shadow: none
 
 /* mobile */
 @keyframes side-scroll 
@@ -649,6 +651,9 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     display: flex
     justify-content: center
     height: 450px
+    /* mobile */
+    height: auto
+    padding: 60px 0
 
 .committed img
     flex-shrink: 10
@@ -660,6 +665,12 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
 .column
     display: flex
     flex-direction: column
+    /* mobile */
+    justify-content: center
+
+/* mobile */
+.column .button
+    margin-bottom: 0
 
 .committed h3 
     font-size: 30px
@@ -670,10 +681,13 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     text-align: center
     color: #484848 //#ededed
     /* mobile */
-    margin: 0
+    margin: 0 15px
+    font-size: 20px
 
 .committed span 
     font-size: 46px
+    /* mobile */
+    font-size: 30px
 
 
 .section-collage 
@@ -682,6 +696,9 @@ nav, .section-slogan, #section-location-container, .section-classes, .section-we
     background-size: 100%
     border-top-color: #f0be65 //#830000
     padding-bottom: 39%
+    /* mobile */
+    background-image: url(../images/collage-m.jpg)
+    padding-bottom: 169.5%
 
 
 .section-schedule 
